         Reported and contributed by Ralph van Etten.
       - Fixed issue when setting header Access-Control-Expose-Headers. Issue #1145.
         Reported by Ralph van Etten.
       - Removed useless log trace for HTTP_OAUTH_BEARER request with raw value. Issue #1152.
       - Cors filter does not take into account PATCH method. Issue #1178.
    - Enhancements
       - Added Request and response attributes to the ResourceException class.
       - ServerResource traces Exception in the doCatch method with SEVERE log
         level, in case of 5xx errors.
       - Added Guice extension to GAE edition. Issue #1136.
    - API changes
       - Added ResourceException#resource attribute and ResourceException#getRequest()
         and ResourceException#getResponse() shortcut methods.

- 2.3.4 (07/16/2015)
    - Bugs fixed
       - LOCK and UNLOCK methods are not safe. Issue #1112.
         Reported by Zsolt Szloboda.
       - Fixed APISpark introspection when application name is not set.

- 2.3.3 (06/21/2015)
    - Bugs fixed
       - Redirector does not translate response's entity location reference.
         Issue #1069.
       - Fixed tunnelFilter. + symbol (%2b) converted incorrectly when media
         query parameter is used. Issue #804.
         Reported by Rob Elsner.
       - Fixed never ending call when an exception happens while writing the
         response's entity using the internal HTTP server connector.
         Issue #1061. Reported by Gernot Pansy.
       - Prevented insertion of query params into POST request for JAX-RS client.
         Issue #1072. Reported by Edouard Mercier.
       - Fixed NPE when OAuth refresh token request when no scope is provided.
         Issue #1080. Reported by Gernot Pansy.
       - Internal HTTP client doesn't fail anymore with null values in headers.
       - Improved robustness of Swagger translation code (import/export).
       - Fixed security scheme issue in RAML translator.

    - Enhancements